--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "algolia/algoliasearch-client-php": "^1.25",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/scout": "^4.0",
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
